--- a/index.html
+++ b/index.html
@@ -4,10 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Style CSS</title>
+    <style>
+    .Style-Interno{
+        background-color: green;
+        color: white;
+        font-size: 18px;
+    }
+
+
+    </style>
 </head>
 <body>
-    <h1>Hola mundo</h1>
-    <h2>Practicando git clone, git commit y git push</h2>
+    <div>   
+        <p>Estilízame con el método externo 
+            <br>
+           (Hoja de Estilo)!!!
+        </p>
+    </div>
+    <p class="Style-Interno">     
+        Me gustaría que me estilizaras con el método interno
+        (etiqueta)!!!
+    </p>
+    <button type="text" style="background-color: orange; font-size: 18px" > 
+        <p >Método Inline(atributo)</p>
+    </button>
 </body>
 </html>
