--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
     <h1>Tarea 01 Modulo 02</h1>
+    <h2>Version Laptop</h2>
     <div>   
         <p>Estilízame con el método externo 
             <br>
