--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <h1>Tarea 01 Modulo 02</h1>
     <h2>Version Laptop</h2>
+    <h3>pruega version laptop</h3>
     <div>   
         <p>Estilízame con el método externo 
             <br>
